--- a/Tetris/makefile
+++ b/Tetris/makefile
@@ -1,2 +1,2 @@
-Main : Main.hs render.hs field.hs Tetrominos.hs state.hs
-	ghc field.hs render.hs Tetrominos.hs state.hs --make Main
+Main : Main.hs render.hs field.hs Tetrominos.hs state.hs movement.hs
+	ghc field.hs render.hs Tetrominos.hs state.hs movement.hs --make Main
